--- a/Poster/Poster.tex
+++ b/Poster/Poster.tex
@@ -173,6 +173,10 @@ In addition to making static queries to evaluate PeerDB performance we evaluated
 PeerDB: github.com/peerlibrary/meteor-peerdb \\
 Benchmarking: github.com/mitar/peerdb-benchmark
 
+\vspace{1em}
+
+\includegraphics[width=\linewidth]{graphs2}
+
 }
 
 \end{poster}
