--- a/automatic_algorithm.tex
+++ b/automatic_algorithm.tex
@@ -1,3 +1,5 @@
+\section{automatic algorithm}
+
 Automatic algorithm: Description (1 page)
 Automatic algorithm: Experimental setup + Results (1/2 page)
 Automatic algorithm: Discussion (1/2 page)
