--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,15 @@ Because each of those documents are stand-alone and static, it is relatively eas
 Such an approach is quick and it scales horizontally easily, but the downside is the multiple round trips you have to do in your code to get all documents you are interested in.
 In modern web applications where program logic is often running directly in the browser, accessing data through a web API, those round trips become even worse because those queries are coming over the Internet where latency is much higher.
 
-% TODO: Add those figures how queries go between server and client
+\begin{figure}[!h]
+\centering
+\includegraphics[width=0.9\columnwidth]{messages-many}
+\caption{In traditional SQL, one query is needed to obtain data spawning multiple relations, but such results can be potentially large and time to compute joins is needed.
+In MongoDB one has to create many subsequent queries to resolve relations, especially in many-to-many relations.
+In PeerDB one has to simply fetch one document, with all relations already resolved, without any computation or communication among instances needed.}
+\label{messages-many}
+\end{figure}
+
 
 Modern web frameworks like Meteor and DerbyJS introduced to the web developers community another family of database queries: reactive queries.
 Using those frameworks you can make a database query where you receive results like you would for a normal query, but afterwards the query stays open and any changes to the results data is pushed to you in a reactive manner.
