Adding input algorithm to main

--- a/main.tex
+++ b/main.tex
@@ -93,6 +93,7 @@ breaklinks=true,
 
 
 \input{related_work}
+\input{algorithm}
 
 
 % Balancing columns in a ref list is a bit of a pain because you
