Mention automatic algorithm.

--- a/peerdb_description.tex
+++ b/peerdb_description.tex
@@ -6,6 +6,7 @@ Together with specifying relations, you can also specify which fields should be 
 Currently, PeerDB requires programmer to decide if and which fields to embed.
 That decision can often be made on program's logic and profiling of queries, in a similar way one would be deciding about existence of an index on a field.
 Both embedding and indexes make a trade-off between faster read times on an expense of write times.
+In later sections we analyze this trade-off and present some general guidelines and automatic algorithm to help deciding if you want to embed fields or not.
 
 Additionally, PeerDB provides an easy way to define generator fields (fields which value is computed based on values of other fields) and generic triggers.
 
