--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ breaklinks=true,
 
 \vspace{-0.08in}
 \keywords{
-	MongoDB, PeerDB, PostgreSQL, Document stores, Reactive queries
+	Document stores, Reactive queries, Embedding subdocuments, MongoDB, PeerDB, PostgreSQL, Meteor
 }
 
 \vspace{-0.08in}
