Added links to code.

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,14 @@
 \clubpenalty=10000 
 \widowpenalty = 10000
 %% EXAMPLE END -- HOW TO OVERRIDE THE DEFAULT COPYRIGHT STRIP -- (July 22, 2013 - Paul Baumann)
-\toappear{CS262A Class Project}
+\toappear{UC Berkeley CS262A Class Project, Fall 2014. \\
+PeerDB source code is available at: \\
+\url{https://github.com/peerlibrary/meteor-peerdb} \\
+Benchmarking source code is available at: \\
+\url{https://github.com/mitar/peerdb-benchmark} \\
+Docker images used when running benchmarks are available at: \\
+\url{https://registry.hub.docker.com/u/mitar/peerdb-benchmark/}
+}
 
 % Arabic page numbers for submission.
 % Remove this line to eliminate page numbers for the camera ready copy
@@ -76,7 +83,7 @@ breaklinks=true,
     \email{amypavel@berkeley.edu}
    \alignauthor Mitar Milutinovic\\
     \affaddr{University of California, Berkeley}\\
-    \email{mitar@berkeley.edu}
+    \email{mitar@tnode.com}
 }
 
 \maketitle
