Small things here and there.

--- a/peerdb_description.tex
+++ b/peerdb_description.tex
@@ -8,11 +8,11 @@ That decision can often be made on program's logic and profiling of queries, in 
 Both embedding and indexes make a trade-off between faster read times on an expense of write times.
 In later sections we analyze this trade-off and present some general guidelines and automatic algorithm to help deciding if you want to embed fields or not.
 
-Additionally, PeerDB provides an easy way to define generator fields (fields which value is computed based on values of other fields) and generic triggers.
+Additionally, PeerDB provides an easy way to define client-side generator fields (fields which value is computed based on values of other fields) and generic triggers, which can be implemented in the client-side language and are run in PeerDB process instead of inside a database management system. This allows easy integration and code reuse with the rest of the application.
 
 It uses an abstraction over MongoDB oplog to implement all above mentioned features.
 MongoDB oplog originally serves for replication among multiple MongoDB instances, sending a stream of all changes from master to slaves.
-We can connect to this same oplog to observe all changes in the database and determine if a change is connected to a field which is embedded in a related document.
+We can connect to this same oplog to observe all changes in the database and determine if a change is connected to a field which is embedded in a related document, or otherwise observed as part of generated fields and triggers.
 If this is so, PeerDB issues update queries which update all those fields in subdocuments in related documents.
 
 In this way original queries return immediately.
